<resources>
    <string name="app_name" translatable="false">Catalogue Movie</string>

    <!-- Navigation -->
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="search_movie">Search Movie</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="favorite">Favorite</string>

    <!-- Menu -->
    <string name="change_language">Change Language</string>
    <string name="setting">Setting</string>

    <!-- Hint -->
    <string name="hint_search">Search Movie Title</string>
    <string name="hint_fill_form">Please fill the form</string>
    <string name="hint_no_internet">No Internet Connection</string>
    <string name="hint_added_to_favorite">Added To Favorite</string>
    <string name="hint_removed_from_favorite">Removed From Favorite</string>
    <string name="hint_no_favorite">No Favorite Movie(s) Found</string>
    <string name="hint_no_data">No Data Available</string>
    <string name="hint_daily_reminder">App will remind you to come back everyday</string>
    <string name="hint_release_today_reminder">You will get notification about today\'s released movie(s)</string>
    <string name="hint_loading_data">Wait until the data loaded</string>
    <string name="toggle_off">Off</string>
    <string name="toggle_on">On</string>

    <!-- Detail -->
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>

    <string name="fav_movie">Favorite Movies</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_msg">Catalogue Movie is missing you!</string>

    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="release_today_reminder_msg">has been released today!</string>


</resources>
